Bug 1538153 - Fix RTL alignment in RequestList headers and align Storage table headers with Netmonitor r=fvsch
Differential Revision: https://phabricator.services.mozilla.com/D24508

UltraBlame original commit: d7d190f03e25cf4dcdf0e205ee8ffc5993000167

--- a/devtools/client/themes/storage.css
+++ b/devtools/client/themes/storage.css
@@ -43,11 +43,11 @@
 #hostOnly,
 #isHttpOnly,
 #sameSite {
-  min-width: 50px;
+  min-width: 58px;
 }
 
 #isSecure {
-  min-width: 40px;
+  min-width: 48px;
 }
 
 
